<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="empty" />
    <string name="app_name">Shopoholic</string>
    <string name="dummy_text">Dummy text</string>
    <string name="facebook_app_id">893615001054278</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="under_development">Under Development</string>
    <string name="google_login_cancel">Google login cancel</string>
    <string name="facebook_login_cancel">Facebook login cancel</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="network_issue">Network Issue! Please try again</string>
    <string name="no_response_from_facebook">Facebook response fail</string>
    <string name="s_click_back_again_msg">Please click BACK again to exit</string>
    <string name="gooogle_api_key">AIzaSyBDMR3FcchmUODoVCqVY080VpQ7M2hTMRQ</string>
    <string name="crash_toast_text">Oops ! App crashed, send report to developers to help fix the issue !</string>
    <string name="dummy_text_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="dummy_text_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="orkney_bold">Orkney Bold.ttf</string>
    <string name="orkney_light">Orkney Light.ttf</string>
    <string name="orkney_medium">Orkney Medium.ttf</string>
    <string name="orkney_regular">Orkney Regular.ttf</string>
    <string name="day_sat">Sat</string>
    <string name="day_fri">Fri</string>
    <string name="day_thu">Thu</string>
    <string name="day_wed">Wed</string>
    <string name="day_tue">Tue</string>
    <string name="day_mon">Mon</string>
    <string name="day_sun">Sun</string>
    <string name="month_january">January</string>
    <string name="month_december">December</string>
    <string name="month_feburary">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="walkthrough_page_one_title">Get Exciting Discount</string>
    <string name="walkthrough_page_two_title">Buy products online or offline</string>
    <string name="walkthrough_page_two_content">Buy and pay for products online or offline.</string>
    <string name="walkthrough_page_three_content">Buy and pay for products online or offline.</string>
    <string name="walkthrough_page_three_title">Choose buddy and get the \n product at your doorstep.</string>
    <string name="walkthrough_page_one_content">Search and explore deals to \n grab discounts on selected products.</string>
    <string name="login">Login</string>
    <string name="log_in">LOGIN</string>
    <string name="txt_email">Email</string>
    <string name="password">Password*</string>
    <string name="login_cancel">Login Cancel</string>
    <string name="i_am_a_human">I am a human</string>
    <string name="or_login_with">Or Login With</string>
    <string name="i_am_not_a_robot">I am a robot</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="image_upload_fail">Image upload Failed</string>
    <string name="email_or_phone_no">Email or Phone Number*</string>
    <string name="please_enter_email">Email can\'t be left blank</string>
    <string name="please_enter_password">Password can\'t be left blank</string>
    <string name="please_enter_valid_last_name">Please enter valid last name</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_valid_phone_no">Please enter valid phone number</string>
    <string name="please_enter_valid_first_name">Please enter valid first name</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?&#160;&#160;SIGN UP</string>
    <string name="please_enter_3_char_first_name">First name must be at least 3 characters long</string>
    <string name="please_check_not_a_robot">You are a robot. You can\'t proceed further to Login</string>
    <string name="password_must_be_6_15_chars">Password can be minimum 6 characters and maximum 18 characters</string>
    <string name="please_enter_valid_email_or_phone_no">Please enter valid email address or phone number</string>
    <string name="txt_uae">UAE</string>
    <string name="txt_india">India</string>
    <string name="txt_macau">Macau</string>
    <string name="txt_singapore">Singapore</string>
    <string name="txt_hong_kong">Hong Kong</string>
    <string name="done">Done</string>
    <string name="name">Name*</string>
    <string name="camera">Camera</string>
    <string name="signup">SIGN UP</string>
    <string name="uae">UAE (+971)</string>
    <string name="gallery">Gallery</string>
    <string name="success">Success!</string>
    <string name="india">India (+91)</string>
    <string name="macau">Macau (+853)</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name*</string>
    <string name="singapore">Singapore (+65)</string>
    <string name="hong_kong">Hong Kong (+852)</string>
    <string name="phone_number">Phone Number*</string>
    <string name="search_country">Search Country</string>
    <string name="select_country">Select Country*</string>
    <string name="txt_select_country">Select Country</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="please_enter_country">Please select country</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="password_not_match">Confirm password didn\'t match</string>
    <string name="please_select_one_country">Please select one country</string>
    <string name="please_enter_first_name">First name can\'t be left blank</string>
    <string name="please_enter_phone_no">Phone number can\'t be left blank</string>
    <string name="please_wait_image_loading">Please wait, image loading...</string>
    <string name="please_enter_country_code">Country code can\'t be left blank</string>
    <string name="phone_no_must_be_7_15_digits">Please enter 7–15 digits for mobile no</string>
    <string name="already_have_an_account_login">Already have an account?&#160;&#160;LOGIN</string>
    <string name="email">Email*</string>
    <string name="resend_otp">RESEND</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_otp">Enter One Time Password</string>
    <string name="hint_enter_otp">Enter One Time Password*</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="did_not_get_otp">Didn\'t receive the One Time Password?</string>
    <string name="account_verification">Account Verification</string>
    <string name="incorrect_otp">Incorrect One Time Password, please try again.</string>
    <string name="otp_resend_successfully">One Time Password resend successfully</string>
    <string name="enter_otp_message">Please enter the One Time Password we sent on</string>
    <string name="forgot_password_email_message">Please enter your email address. We will send you an One Time Password to reset your password.</string>
    <string name="forgot_password_phone_message">Please enter your phone number. We will send you an One Time Password to reset your password.</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password*</string>
    <string name="new_password">New Password*</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_reset_successfully">Password reset successfully</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="reset_password_message">Please set new password for your account</string>
    <string name="signup_success_message">Your signup was successful.\nWe have sent you an One Time Password on your number and the verification link on your email you entered.</string>
    <string name="skip">Skip</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="location">Location</string>
    <string name="anniversary">Anniversary</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="anniversary_date">Anniversary Date</string>
    <string name="other_information">Other Information</string>
    <string name="detect_my_location">Detect my Location</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="send_reset_link">Send \nreset link</string>
    <string name="save">Save</string>
    <string name="preferred_categories">Preferred Categories</string>
    <string name="preferred_category">Preferred Category</string>
    <string name="please_select_at_least_one">Please select at least one</string>
    <string name="please_select_at_least_one_date">Please select at least one date</string>
    <string name="please_select_at_least_one_slot">Please select at least one slot</string>
    <string name="cvv">CVV</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="card_number">Card Number</string>
    <string name="choose_bank">Choose Bank*</string>
    <string name="card_details">Card Details</string>
    <string name="save_and_next">Save &amp; \nnext</string>
    <string name="account_number">Account Number*</string>
    <string name="bank_ifsc_code">Bank IFSC Code*</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="popular_deals">Popular Deals</string>
    <string name="retry">Retry</string>
    <string name="dummy_card_no">**** **** **** 0956</string>
    <string name="card_holder">Card Holder</string>
    <string name="expires">Expires</string>
    <string name="dummy_card_date">04/17</string>
    <string name="dummy_card_name">DAVID LUIZ</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="my_offer_for_this_would_be">My Offer for this would be...</string>
    <string name="cancel">Cancel</string>
    <string name="dollar0">0 Points</string>
    <string name="total_available_balance">Total Available Balance</string>
    <string name="edittext_hint">Write your feedback...</string>
    <string name="you_can_reach_us_at">You can reach us at :-</string>
    <string name="wework_32_milestone_the_galaxy_hotel_nh8_sector_15_gurugram_hr_122001">WeWork, 32 Milestone, The Galaxy Hotel NH8, Sector 15, Gurugram, HR-122001</string>
    <string name="helpme_shopoholicbuddy_com">helpme@shopoholicbuddy.com</string>
</resources>