<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:focusableInTouchMode="true"
    android:id="@+id/ll_parent">

    <include
        layout="@layout/layout_login_toolbar"/>

    <com.shopoholic.customviews.CustomEditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:minLines="8"
        android:maxLines="8"
        android:gravity="start"
        android:maxLength="250"
        app:fontName="@string/orkney_regular"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/edittext_hint"
        android:textColorHint="@color/colorHintText"
        android:background="@drawable/white_stroke_transparent_bg"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_15sdp"
        />

    <include
        layout="@layout/layout_button_loader"/>

    <com.shopoholic.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:fontName="@string/orkney_regular"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/you_can_reach_us_at"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        />
    <com.shopoholic.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:fontName="@string/orkney_bold"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/wework_32_milestone_the_galaxy_hotel_nh8_sector_15_gurugram_hr_122001"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        />
    <com.shopoholic.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:fontName="@string/orkney_bold"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/helpme_shopoholicbuddy_com"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        />

</LinearLayout>
