<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_retry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/_10sdp"
    android:gravity="center"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.shopoholic.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_issue"
        app:fontName="@string/orkney_bold"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_5sdp"/>
    <com.shopoholic.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        app:fontName="@string/orkney_bold"
        android:drawableTop="@drawable/ic_retry"
        android:padding="@dimen/_5sdp"/>
</LinearLayout>
